Update the package ID.

--- a/src/dotnet/ReSharperPlugin.FindMyHandlR/ReSharperPlugin.FindMyHandlR.csproj
+++ b/src/dotnet/ReSharperPlugin.FindMyHandlR/ReSharperPlugin.FindMyHandlR.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <LanguageTargets>$(MSBuildToolsPath)\Microsoft.CSharp.targets</LanguageTargets>
     <LangVersion>default</LangVersion>
+    <PackageId>nosuchcompany.find-my-handlr</PackageId>
   </PropertyGroup>
 
   <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
