--- a/src/dotnet/ReSharperPlugin.FindMyHandlR/ReSharperPlugin.FindMyHandlR.csproj
+++ b/src/dotnet/ReSharperPlugin.FindMyHandlR/ReSharperPlugin.FindMyHandlR.csproj
@@ -13,6 +13,7 @@
     <IsPackable>True</IsPackable>
     <DefineConstants>$(DefineConstants);RESHARPER</DefineConstants>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
