--- a/src/dotnet/Plugin.props
+++ b/src/dotnet/Plugin.props
@@ -11,7 +11,7 @@
     <PackageTags>mediatr</PackageTags>
 
     <PackageProjectUrl>https://github.com/kzryzstof/find-my-handlr</PackageProjectUrl>
-    <PackageLicenseUrl>https://www.gnu.org/licenses/gpl-3.0.en.html</PackageLicenseUrl>
+    <PackageLicenseUrl>https://www.gnu.org/licenses/lgpl-3.0.en.html</PackageLicenseUrl>
     <PackageIconUrl></PackageIconUrl>
   </PropertyGroup>
 
