--- a/src/dotnet/ReSharperPlugin.FindMyHandlR/ReSharperPlugin.FindMyHandlR.Rider.csproj
+++ b/src/dotnet/ReSharperPlugin.FindMyHandlR/ReSharperPlugin.FindMyHandlR.Rider.csproj
@@ -11,7 +11,7 @@
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
     <AssemblyName>ReSharperPlugin.FindMyHandlR</AssemblyName>
-    <RootNamespace>$(AssemblyName)</RootNamespace>
+    <RootNamespace>NoSuchCompany.ReSharperPlugin.FindMyHandlR</RootNamespace>
     <IsPackable>false</IsPackable>
     <DefineConstants>$(DefineConstants);RIDER</DefineConstants>
   </PropertyGroup>
