Update the rider plugin information.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@
 
 DotnetPluginId=ReSharperPlugin.FindMyHandlR
 DotnetSolution=ReSharperPlugin.FindMyHandlR.sln
-RiderPluginId=com.jetbrains.rider.plugins.findmyhandlr
-PluginVersion=9999.0.0
+RiderPluginId=ca.nosuchcompany.rider.plugins.findmyhandlr
+PluginVersion=21.12.2801
 
 BuildConfiguration=Debug
 
