--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -1,25 +1,15 @@
 <idea-plugin require-restart="true">
-  <id>com.jetbrains.rider.plugins.findmyhandlr</id>
-  <name>FindMyHandlR</name>
+  <id>ca.nosuchcompany.rider.plugins.findmyhandlr</id>
+  <name>Find My HandlR</name>
   <version>_PLACEHOLDER_</version>
-  <vendor url="https://project-url">Author</vendor>
+  <vendor url="https://github.com/kzryzstof/find-my-handlr">Author</vendor>
   <idea-version since-build="_PLACEHOLDER_" until-build="_PLACEHOLDER_" />
   <depends>com.intellij.modules.rider</depends>
 
   <description>
 <![CDATA[
-<p>Sample description</p>
+<p>The plugin provides a way to easily reach the handler of a given MediatR request.</p>
 ]]>
   </description>
-
-  <extensions defaultExtensionNs="com.intellij">
-    <applicationConfigurable groupId="language" instance="com.jetbrains.rider.plugins.findmyhandlr.SampleOptionsPage" id="SampleOptionsPage" />
-  </extensions>
-
-  <actions>
-    <action id="SampleAction" class="com.jetbrains.rider.plugins.findmyhandlr.SampleAction"
-            text="Do Something" description="Do Something Description">
-    </action>
-  </actions>
 
 </idea-plugin>
