Include a bash script used to update the version of the rider's plugin.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 DotnetPluginId=ReSharperPlugin.FindMyHandlR
 DotnetSolution=ReSharperPlugin.FindMyHandlR.sln
 RiderPluginId=ca.nosuchcompany.rider.plugins.findmyhandlr
-PluginVersion=21.12.2801
+PluginVersion=_PLACEHOLDER_
 
 BuildConfiguration=Debug
 
