--- a/src/dotnet/NoSuchCompany.FindMyHandlR.Tests/NoSuchCompany.FindMyHandlR.Tests.csproj
+++ b/src/dotnet/NoSuchCompany.FindMyHandlR.Tests/NoSuchCompany.FindMyHandlR.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReSharperPlugin.FindMyHandlR\ReSharperPlugin.FindMyHandlR.csproj" />
+    <ProjectReference Include="..\NoSuchCompany.FindMyHandlR\NoSuchCompany.FindMyHandlR.csproj" />
   </ItemGroup>
 
   <ItemGroup>
