--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
   <id>ca.nosuchcompany.rider.plugins.findmyhandlr</id>
   <name>Find My HandlR</name>
   <version>_PLACEHOLDER_</version>
-  <vendor url="https://github.com/kzryzstof/find-my-handlr">Author</vendor>
+  <vendor url="https://github.com/kzryzstof/find-my-handlr">NoSuch Company</vendor>
   <idea-version since-build="_PLACEHOLDER_" until-build="_PLACEHOLDER_" />
   <depends>com.intellij.modules.rider</depends>
 
