Renames the Plugin to MediatR

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 # Any property can be overwritten from command-line via
 #   -P<propertyName>=<value>
 
-DotnetPluginId=NoSuchCompany.FindMyHandlR
-DotnetSolution=NoSuchCompany.FindMyHandlR.sln
-RiderPluginId=ca.nosuchcompany.rider.plugins.findmyhandlr
+DotnetPluginId=NoSuchCompany.MediatrPlugin
+DotnetSolution=NoSuchCompany.MediatrPlugin.sln
+RiderPluginId=ca.nosuchcompany.rider.plugins.mediatr
 PluginVersion=_PLACEHOLDER_
 
 BuildConfiguration=Debug
