--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin require-restart="true">
-  <id>ca.nosuchcompany.rider.plugins.findmyhandlr</id>
-  <name>Find My HandlR</name>
+  <id>ca.nosuchcompany.rider.plugins.mediatr</id>
+  <name>MediatR Extensions</name>
   <version>_PLACEHOLDER_</version>
-  <vendor url="https://github.com/kzryzstof/find-my-handlr">NoSuch Company</vendor>
+  <vendor url="https://github.com/kzryzstof/mediatr-plugin">NoSuch Company</vendor>
   <idea-version since-build="_PLACEHOLDER_" until-build="_PLACEHOLDER_" />
   <depends>com.intellij.modules.rider</depends>
 
@@ -18,7 +18,7 @@
            popup="true">
       <add-to-group group-id="GoToMenu" />
       <action id="GoToHandlrAction"
-              class="ca.nosuchcompany.rider.plugins.findmyhandlr.GoToHandlrAction">
+              class="ca.nosuchcompany.rider.plugins.mediatr.GoToHandlrAction">
         <keyboard-shortcut keymap="$default" first-keystroke="control alt F11" replace-all="true" />
       </action>
     </group>
