--- a/src/dotnet/NoSuchCompany.MediatrPlugin/NoSuchCompany.MediatrPlugin.csproj
+++ b/src/dotnet/NoSuchCompany.MediatrPlugin/NoSuchCompany.MediatrPlugin.csproj
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <LanguageTargets>$(MSBuildToolsPath)\Microsoft.CSharp.targets</LanguageTargets>
     <LangVersion>default</LangVersion>
-    <PackageId>nosuchcompany.mediatrplugin</PackageId>
+    <PackageId>ca.nosuchcompany.mediatrplugin</PackageId>
+    <PackageVersion>1.0.1</PackageVersion>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
     <Nullable>enable</Nullable>
     <RootNamespace>NoSuchCompany.ReSharper.MediatrPlugin</RootNamespace>
     <AssemblyName>NoSuchCompany.MediatrPlugin</AssemblyName>
