--- a/src/dotnet/Plugin.props
+++ b/src/dotnet/Plugin.props
@@ -4,7 +4,7 @@
     <SdkVersion>2021.3.0</SdkVersion>
 
     <Title>MediatR Extensions</Title>
-    <Description>The Plugin provides the ability to quickly find the MediatR handler corresponding to a given IRequest</Description>
+    <Description>Ever got frustrated to find out where was the handler of a MediatR's IRequest? Say no more. This plugin provides a context action to easily reach the handler of any MediatR request. Select your MediatR request, click on that action and boom you will be automatically transported to the appropriate handler.</Description>
 
     <Authors>NoSuch Company</Authors>
     <Copyright></Copyright>
