--- a/src/dotnet/NoSuchCompany.MediatrPlugin/NoSuchCompany.MediatrPlugin.csproj
+++ b/src/dotnet/NoSuchCompany.MediatrPlugin/NoSuchCompany.MediatrPlugin.csproj
@@ -33,6 +33,7 @@
     <None Remove="bin\**" />
     <EmbeddedResource Remove="bin\**" />
     <Compile Remove="bin\**" />
+    <EmbeddedResource Include="Properties/Actions.xml"/>
   </ItemGroup>
 
   <!-- WARNING: ReSharper plugins with icons must be compiled using PowerShell scripts -->
