Upgrade packages as well.

--- a/src/dotnet/NoSuchCompany.MediatrPlugin.Tests/NoSuchCompany.MediatrPlugin.Tests.csproj
+++ b/src/dotnet/NoSuchCompany.MediatrPlugin.Tests/NoSuchCompany.MediatrPlugin.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="$(SdkVersion)" />
+    <PackageReference Update="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
