- Upgrade the references in Gradle; - Uses the namespace to find the handler.

--- a/test-solution/Domain/Domain.csproj
+++ b/test-solution/Domain/Domain.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="GetEntityRequest.cs" />
     <Compile Include="GetEntityResponse.cs" />
+    <Compile Include="OtherNamespace\GetEntityRequest.cs" />
+    <Compile Include="OtherNamespace\GetEntityResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartStreamingRequest.cs" />
     <Compile Include="TriggerDeletionRequest.cs" />
