--- a/test-solution/Application/Application.csproj
+++ b/test-solution/Application/Application.csproj
@@ -44,6 +44,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="GetEntityHandler.cs" />
+        <Compile Include="OtherNamespace\GetEntityHandler.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="StartStreamingHandler.cs" />
         <Compile Include="TriggerDeletionHandler.cs" />
