--- a/test-solution/Domain/Domain.csproj
+++ b/test-solution/Domain/Domain.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="GetEntityRequest.cs" />
     <Compile Include="GetEntityResponse.cs" />
+    <Compile Include="OtherNamespace\CustomRequest.cs" />
     <Compile Include="OtherNamespace\GetEntityRequest.cs" />
     <Compile Include="OtherNamespace\GetEntityResponse.cs" />
+    <Compile Include="OtherNamespace\ICustomRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartStreamingRequest.cs" />
     <Compile Include="TriggerDeletionRequest.cs" />
