Set Java requirement.

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ ext {
     }
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(55))
+    }
+}
+
 repositories {
     maven { url 'https://cache-redirector.jetbrains.com/intellij-repository/snapshots' }
     maven { url 'https://cache-redirector.jetbrains.com/maven-central' }
