--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
     id 'java'
+    id("java-library")
     id 'org.jetbrains.kotlin.jvm' version '1.8.21'  //  https://plugins.gradle.org/plugin/org.jetbrains.kotlin.jvm/1.8.21
     id 'org.jetbrains.intellij' version '1.13.3'    // https://github.com/JetBrains/gradle-intellij-plugin/releases
     id 'com.jetbrains.rdgen' version '2023.2.1'     // https://www.myget.org/feed/rd-snapshots/package/maven/com.jetbrains.rd/rd-gen
@@ -17,7 +18,7 @@ ext {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(61))
+        languageVersion.set(JavaLanguageVersion.of(17))
     }
 }
 
