--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ ProductVersion=2023.2-EAP2-SNAPSHOT
 # Kotlin 1.4 will bundle the stdlib dependency by default, causing problems with the version bundled with the IDE
 # https://blog.jetbrains.com/kotlin/2020/07/kotlin-1-4-rc-released/#stdlib-default
 kotlin.stdlib.default.dependency=false
+
+//  See https://plugins.jetbrains.com/docs/intellij/using-kotlin.html#incremental-compilation
+kotlin.incremental.useClasspathSnapshot=false
