feat(handlr-creator): add handler creating action

--- a/src/dotnet/NoSuchCompany.MediatrPlugin.Tests/test/data/nuget.config
+++ b/src/dotnet/NoSuchCompany.MediatrPlugin.Tests/test/data/nuget.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <config>
+        <add key="repositoryPath" value="../../Packages" />
+    </config>
   <packageSources>
     <clear />
-    <add key="nuget.org" value="http://www.nuget.org/api/v2/" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
     <clear />
