--- a/src/dotnet/NoSuchCompany.MediatrPlugin.Tests/NoSuchCompany.MediatrPlugin.Tests.csproj
+++ b/src/dotnet/NoSuchCompany.MediatrPlugin.Tests/NoSuchCompany.MediatrPlugin.Tests.csproj
@@ -1,25 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
-    <IsPackable>false</IsPackable>
-    <LangVersion>default</LangVersion>
-    <RootNamespace>NoSuchCompany.ReSharper.MediatrPlugin.Tests</RootNamespace>
-    <AssemblyName>NoSuchCompany.ReSharper.MediatrPlugin.Tests</AssemblyName>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net472</TargetFramework>
+        <IsPackable>false</IsPackable>
+        <LangVersion>latest</LangVersion>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="$(SdkVersion)" />
-    <PackageReference Update="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="$(SdkVersion)" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Compile Remove="test/**/*" />
-    <None Include="test/**/*" />
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Remove="test/**/*" />
+        <None Include="test/**/*" />
+        <None Remove="Packages\**" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\NoSuchCompany.MediatrPlugin\NoSuchCompany.MediatrPlugin.csproj" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <ProjectReference Include="..\NoSuchCompany.MediatrPlugin\NoSuchCompany.MediatrPlugin.csproj" />
+    </ItemGroup>
 </Project>
