--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -35,51 +35,54 @@ stages:
 
           - task: JavaToolInstaller@0
             inputs:
-              versionSpec: '20'
-              jdkArchitectureOption: 'x64'
-              jdkSourceOption: 'AzureStorage'
-              jdkFile: '<JDK FILE>'
-              jdkDestinationDirectory: '$(Agent.ToolsDirectory)/jdk'
-              cleanDestinationDirectory: true
+              versionSpec                   : '20'
+              jdkArchitectureOption         : 'x64'
+              jdkSourceOption               : 'AzureStorage'
+              azureResourceManagerEndpoint  : 'Azure (plugin-rider-pipeline)'
+              azureStorageAccountName       : 'stpluginriderpipeline'
+              azureContainerName            : 'jdk20'
+              jdkFile                       : 'jdk-20_macos-x64_bin.tar.gz'
+              jdkDestinationDirectory       : '$(Agent.ToolsDirectory)/jdk'
+              cleanDestinationDirectory     : true
               
           - task: Bash@3
             displayName: 'update version (gradle & plugin.xml)'
             inputs:
-              targetType: filePath
-              filePath: './update-version.sh'
-              arguments: '$(Build.BuildNumber)'
+              targetType  : filePath
+              filePath     : './update-version.sh'
+              arguments   : '$(Build.BuildNumber)'
             
           - task: Gradle@3
             displayName: 'gradlew :prepareSandbox'
             inputs:
-              options: '-PPluginVersion=$(Build.BuildNumber)'
-              tasks: ':prepareSandbox'
-              publishJUnitResults: false
-              jdkVersionOption: 1.20
+              options             : '-PPluginVersion=$(Build.BuildNumber)'
+              tasks               : ':prepareSandbox'
+              publishJUnitResults : false
+              jdkVersionOption    : 1.20
           
           - task: CopyFiles@2
             displayName: 'copy .jar file'
             inputs:
-              SourceFolder: '$(Build.SourcesDirectory)'
-              Contents: 'build/libs/mediatr-$(Build.BuildNumber).jar'
-              TargetFolder: '$(Build.ArtifactStagingDirectory)/rider/mediatr/lib'
-              flattenFolders: true
+              SourceFolder  : '$(Build.SourcesDirectory)'
+              Contents      : 'build/libs/mediatr-$(Build.BuildNumber).jar'
+              TargetFolder  : '$(Build.ArtifactStagingDirectory)/rider/mediatr/lib'
+              flattenFolders : true
           
           - task: CopyFiles@2
             displayName: 'copy plugin.xml file'
             inputs:
-              SourceFolder: '$(Build.SourcesDirectory)'
-              Contents: 'build/resources/main/META-INF/plugin.xml'
-              TargetFolder: '$(Build.ArtifactStagingDirectory)/rider/mediatr/META-INF'
-              flattenFolders: true
+              SourceFolder  : '$(Build.SourcesDirectory)'
+              Contents      : 'build/resources/main/META-INF/plugin.xml'
+              TargetFolder  : '$(Build.ArtifactStagingDirectory)/rider/mediatr/META-INF'
+              flattenFolders : true
 
           - task: CopyFiles@2
             displayName: 'copy pluginIcon.xml'
             inputs:
-              SourceFolder: '$(Build.SourcesDirectory)'
-              Contents: pluginIcon.svg
-              TargetFolder: '$(Build.ArtifactStagingDirectory)/rider/mediatr/META-INF'
-              flattenFolders: true
+              SourceFolder  : '$(Build.SourcesDirectory)'
+              Contents      : pluginIcon.svg
+              TargetFolder  : '$(Build.ArtifactStagingDirectory)/rider/mediatr/META-INF'
+              flattenFolders : true
               
           - task: CopyFiles@2
             displayName: 'copy dotnet file'
@@ -95,35 +98,35 @@ stages:
           - task: ArchiveFiles@2
             displayName: 'archive rider plugin'
             inputs:
-              rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/rider/mediatr'
-              archiveFile: '$(Build.ArtifactStagingDirectory)/mediatr.$(Build.BuildNumber).zip'
+              rootFolderOrFile  : '$(Build.ArtifactStagingDirectory)/rider/mediatr'
+              archiveFile       : '$(Build.ArtifactStagingDirectory)/mediatr.$(Build.BuildNumber).zip'
           
           - task: PublishBuildArtifacts@1
             displayName: 'publish rider plugin'
             inputs:
-              PathtoPublish: '$(Build.ArtifactStagingDirectory)/mediatr.$(Build.BuildNumber).zip'
-              ArtifactName: 'mediatr.rider.$(Build.BuildNumber)'
+              PathtoPublish : '$(Build.ArtifactStagingDirectory)/mediatr.$(Build.BuildNumber).zip'
+              ArtifactName  : 'mediatr.rider.$(Build.BuildNumber)'
 
           - task: CopyFiles@2
             displayName: 'copy resharper plugin'
             inputs:
-              SourceFolder: '$(Build.SourcesDirectory)/src/dotnet/NoSuchCompany.MediatrPlugin/bin/NoSuchCompany.MediatrPlugin/Debug/'
-              Contents: '*.nupkg'
-              TargetFolder: '$(Build.ArtifactStagingDirectory)/resharper'
-              CleanTargetFolder: true
-              flattenFolders: true
+              SourceFolder      : '$(Build.SourcesDirectory)/src/dotnet/NoSuchCompany.MediatrPlugin/bin/NoSuchCompany.MediatrPlugin/Debug/'
+              Contents          : '*.nupkg'
+              TargetFolder      : '$(Build.ArtifactStagingDirectory)/resharper'
+              CleanTargetFolder : true
+              flattenFolders     : true
             
           - task: PublishBuildArtifacts@1
             displayName: 'publish resharper copy'
             inputs:
-              PathtoPublish: '$(Build.ArtifactStagingDirectory)/resharper'
-              ArtifactName: 'mediatr.resharper.$(Build.BuildNumber)'
+              PathtoPublish : '$(Build.ArtifactStagingDirectory)/resharper'
+              ArtifactName  : 'mediatr.resharper.$(Build.BuildNumber)'
             
           - task: NuGetCommand@2
-            displayName: 'NuGet push'
+            displayName : 'NuGet push'
+            enabled     : false
             inputs:
-              command: push
-              packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
-              nuGetFeedType: external
+              command               : push
+              packagesToPush        : '$(Build.ArtifactStagingDirectory)/*.nupkg'
+              nuGetFeedType         : external
               publishFeedCredentials: ${{ variables.jetbrainsNugetName }}
-            enabled: false
