Add virtual file path to Azure Blob Storage in build stage
Added the 'azureCommonVirtualFile' parameter pointing to 'jdks/jdk20.zip' to the build.yaml file. This additional path guideline was necessary to enable the pipeline to correctly fetch the JDK from the Azure Blob Storage during the build stage.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -41,6 +41,7 @@ stages:
               azureResourceManagerEndpoint  : 'Azure (plugin-rider-pipeline)'
               azureStorageAccountName       : 'stpluginriderpipeline'
               azureContainerName            : 'jdk20'
+              azureCommonVirtualFile        : 'jdks/jdk20.zip'
               jdkFile                       : 'jdk-20_macos-x64_bin.tar.gz'
               jdkDestinationDirectory       : '$(Agent.ToolsDirectory)/jdk'
               cleanDestinationDirectory     : true
