Update JDK source option in build stage
The JDK source option in the build.yaml file was updated from 'AzureStorage' to 'PreInstalled'. This was done as the previous configuration was causing build instability issues. Instead of pulling the JDK from Azure storage during every build, the JDK is now pre-installed on the build servers. This will hopefully reduce build times and potential for errors. References to the Azure storage have been commented out for future reference if needed.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -33,15 +33,16 @@ stages:
 
           - task: JavaToolInstaller@0
             inputs:
-              versionSpec                   : '20'
-              jdkArchitectureOption         : 'x64'
-              jdkSourceOption               : 'AzureStorage'
-              azureResourceManagerEndpoint  : 'Azure (plugin-rider-pipeline)'
-              azureStorageAccountName       : 'stpluginriderpipeline'
-              azureContainerName            : 'jdk20'
-              azureCommonVirtualFile        : 'jdk-20_macos-x64_bin.tar.gz'
-              jdkDestinationDirectory       : '$(Agent.ToolsDirectory)/jdk'
-              cleanDestinationDirectory     : true
+              versionSpec           : '20'
+              jdkArchitectureOption : 'x64'
+              jdkSourceOption       : 'PreInstalled'
+              #jdkSourceOption               : 'AzureStorage'
+              #azureResourceManagerEndpoint  : 'Azure (plugin-rider-pipeline)'
+              #azureStorageAccountName       : 'stpluginriderpipeline'
+              #azureContainerName            : 'jdk20'
+              #azureCommonVirtualFile        : 'jdk-20_macos-x64_bin.tar.gz'
+              #jdkDestinationDirectory       : '$(Agent.ToolsDirectory)/jdk'
+              #cleanDestinationDirectory     : true
               
           - task: Bash@3
             displayName: 'update version (gradle & plugin.xml)'
