"Switch JDK source from PreInstalled to AzureStorage"
In the build configuration file, the JDK sourceOption parameter has been changed. Previously, the build script used a pre-installed version of JDK. Now, it fetches JDK from AzureStorage. This change ensures the build process always uses the identical, up-to-date version of JDK, which is stored in a specified AzureStorage account. This strategy improves the reproducibility and reliability of our builds.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -35,14 +35,13 @@ stages:
             inputs:
               versionSpec           : '20'
               jdkArchitectureOption : 'x64'
-              jdkSourceOption       : 'PreInstalled'
-              #jdkSourceOption               : 'AzureStorage'
-              #azureResourceManagerEndpoint  : 'Azure (plugin-rider-pipeline)'
-              #azureStorageAccountName       : 'stpluginriderpipeline'
-              #azureContainerName            : 'jdk20'
-              #azureCommonVirtualFile        : 'jdk-20_macos-x64_bin.tar.gz'
-              #jdkDestinationDirectory       : '$(Agent.ToolsDirectory)/jdk'
-              #cleanDestinationDirectory     : true
+              jdkSourceOption               : 'AzureStorage'
+              azureResourceManagerEndpoint  : 'Azure (plugin-rider-pipeline)'
+              azureStorageAccountName       : 'stpluginriderpipeline'
+              azureContainerName            : 'jdk20'
+              azureCommonVirtualFile        : 'jdk-20_macos-x64_bin.zip'
+              jdkDestinationDirectory       : '$(Agent.ToolsDirectory)/jdk'
+              cleanDestinationDirectory     : true
               
           - task: Bash@3
             displayName: 'update version (gradle & plugin.xml)'
