Update build.yaml to adjust jdkDestinationDirectory and jdkDirectory paths
The changes in the build.yaml file reflect adjustments to path expressions related to JDK location. The path for jdkDestinationDirectory had extraneous single quotes, which have been removed to ensure correct path recognition.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -40,7 +40,7 @@ stages:
               azureStorageAccountName       : 'stpluginriderpipeline'
               azureContainerName            : 'jdk20'
               azureCommonVirtualFile        : 'jdk-20_macos-x64_bin.zip'
-              jdkDestinationDirectory       : '$(Agent.ToolsDirectory)/jdk'
+              jdkDestinationDirectory       : $(Agent.ToolsDirectory)/jdk
               cleanDestinationDirectory     : true
               
           - task: Bash@3
@@ -57,6 +57,7 @@ stages:
               tasks               : ':prepareSandbox'
               publishJUnitResults : false
               jdkVersionOption    : 1.20
+              jdkDirectory        : $(Agent.ToolsDirectory)/jdk
           
           - task: CopyFiles@2
             displayName: 'copy .jar file'
