Update JDK path in build configuration
In the build stage file (build.yaml), the JDK path for tasks was updated from $(Agent.ToolsDirectory)/jdk to $(Agent.ToolsDirectory)/jdk/bin. This change is necessary for tasks requiring the JDK to accurately find and use the appropriate Java binaries in the build process.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -30,7 +30,7 @@ stages:
             displayName: 'install .net 6.0 SDK'
             inputs:
               version: 6.x
-
+  
           - task: JavaToolInstaller@0
             inputs:
               versionSpec           : '20'
@@ -57,7 +57,7 @@ stages:
               tasks               : ':prepareSandbox'
               publishJUnitResults : false
               jdkVersionOption    : 1.20
-              jdkDirectory        : $(Agent.ToolsDirectory)/jdk
+              jdkDirectory        : $(Agent.ToolsDirectory)/jdk/bin
           
           - task: CopyFiles@2
             displayName: 'copy .jar file'
