Add javaHomeOption to build config
This commit adds a 'javaHomeOption' to the build configuration file. Considering some projects may require specific JDK paths, this allows for configurable Java home paths, increasing the pipeline's flexibility and configurability.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -57,6 +57,7 @@ stages:
               tasks               : ':prepareSandbox'
               publishJUnitResults : false
               jdkVersionOption    : 1.20
+              javaHomeOption      : 'Path'
               jdkDirectory        : $(Agent.ToolsDirectory)/jdk/bin
           
           - task: CopyFiles@2
