Update jdkDirectory in build.yaml
Modified the jdkDirectory path in build.yaml file of CI/CD stages in the DevOps. The change removes the '/bin' segment from the end of the path. This modification is necessary to ensure that the system correctly identifies the Java Development Kit's (JDK) location. Deployments were failing previously due to this error in the path.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -58,7 +58,7 @@ stages:
               publishJUnitResults : false
               jdkVersionOption    : 1.20
               javaHomeOption      : 'Path'
-              jdkDirectory        : $(Agent.ToolsDirectory)/jdk/bin
+              jdkDirectory        : $(Agent.ToolsDirectory)/jdk
           
           - task: CopyFiles@2
             displayName: 'copy .jar file'
