Update JDK directory path in build.yaml
The JDK directory path in the build.yaml file has been updated to point to the specific Java version 20.0.2. This change was necessary to ensure that the build process uses the correct and consistent Java version, improving build reliability and consistency.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -58,7 +58,7 @@ stages:
               publishJUnitResults : false
               jdkVersionOption    : 1.20
               javaHomeOption      : 'Path'
-              jdkDirectory        : $(Agent.ToolsDirectory)/jdk
+              jdkDirectory        : $(Agent.ToolsDirectory)/jdk/JAVA_HOME_20_X64_jdk-20_macos-x64_bin_zip/jdk-20.0.2
           
           - task: CopyFiles@2
             displayName: 'copy .jar file'
