Update pipeline's agent pool
The agent pool was changed from 'Azure Pipelines' to 'On-premise Pool' in the azure-pipeline.ci.yaml file. This was done to move the CI/CD processes from cloud-hosted agents to locally hosted ones to better align with our new infrastructure strategy.

--- a/devops/cicd/azure-pipeline.ci.yaml
+++ b/devops/cicd/azure-pipeline.ci.yaml
@@ -12,7 +12,8 @@ trigger:
 
 variables:
   - name: poolName
-    value: 'Azure Pipelines'
+    #value: 'Azure Pipelines'
+    value: 'On-premise Pool'
   - name: vmImageName
     value: 'macos-latest'
 
