Update JDK file name in build pipeline
Updated the azureCommonVirtualFile in the devops/cicd/stages/build.yaml from 'jdk-20_macos-x64_bin.zip' to 'jdk-20.zip'. This change simplifies the naming convention and improves readability.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -39,7 +39,7 @@ stages:
               azureResourceManagerEndpoint  : 'Azure (plugin-rider-pipeline)'
               azureStorageAccountName       : 'stpluginriderpipeline'
               azureContainerName            : 'jdk20'
-              azureCommonVirtualFile        : 'jdk-20_macos-x64_bin.zip'
+              azureCommonVirtualFile        : 'jdk-20.zip'
               jdkDestinationDirectory       : $(Agent.ToolsDirectory)/jdk
               cleanDestinationDirectory     : true
               
