Update JDK directory in build.yaml
Updated the JDK directory path in the build.yaml file under devops/cicd/stages to correct the Java Home directory. This change follows a recent infrastructure update where the Java SDK paths have been modified. This corrects the build process to point to the correct Java SDK directory.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -57,7 +57,7 @@ stages:
               tasks               : ':prepareSandbox'
               publishJUnitResults : false
               javaHomeOption      : 'Path'
-              jdkDirectory        : $(Agent.ToolsDirectory)/jdk/jdk_20
+              jdkDirectory        : $(Agent.ToolsDirectory)/jdk/JAVA_HOME_20_X64_jdk_20_zip
           
           - task: CopyFiles@2
             displayName: 'copy .jar file'
