Change poolName value back to 'Azure Pipelines'
The poolName value in azure-pipeline.ci.yaml was updated from 'On-premise Pool' back to 'Azure Pipelines'. This change was necessary as we are shifting our CI/CD processes from on-premise infrastructure to Azure cloud services for improved efficiency and scalability.

--- a/devops/cicd/azure-pipeline.ci.yaml
+++ b/devops/cicd/azure-pipeline.ci.yaml
@@ -11,11 +11,10 @@ trigger:
       - '*'
 
 variables:
-  - name: poolName
-    #value: 'Azure Pipelines'
-    value: 'On-premise Pool'
-  - name: vmImageName
-    value: 'macos-latest'
+  - name  : poolName
+    value : 'Azure Pipelines'
+  - name  : vmImageName
+    value : 'macos-latest'
 
 stages:
   - template: 'stages/build.yaml'
