"Update JDK file name in build.yaml"
In the 'devops/cicd/stages/build.yaml' file, the name of the `azureCommonVirtualFile` was changed from 'jdk_17.zip' to 'jdk17.zip'. This modification ensures consistent naming conventions across the project.

--- a/devops/cicd/stages/build.yaml
+++ b/devops/cicd/stages/build.yaml
@@ -39,7 +39,7 @@ stages:
               azureResourceManagerEndpoint  : 'Azure (plugin-rider-pipeline)'
               azureStorageAccountName       : 'stpluginriderpipeline'
               azureContainerName            : 'jdk17'
-              azureCommonVirtualFile        : 'jdk_17.zip'
+              azureCommonVirtualFile        : 'jdk17.zip'
               jdkDestinationDirectory       : $(Agent.ToolsDirectory)/jdk
               cleanDestinationDirectory     : true
               
