Set Java compile compatibility and update log levels in MediatR service
The 'compileJava' task was added to 'build.gradle' file to set the target Java version at default compatibility level for all builds. It ensures uniformity and compatibility with Java 17. Additionally, the log levels have been downgraded from WARNING to INFO for several messages in 'HandlrNavigator.cs' and 'MediatR.cs' within the `NoSuchCompany.MediatRPlugin` to reduce the noise from non-critical warnings and only warn when necessary. A filter is also added to discard null type arguments while scanning inherited types in `MediatR.cs`.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ compileKotlin {
     kotlinOptions { jvmTarget = "17" }
 }
 
+compileJava {
+    targetCompatibility = "17"
+}
+
 task setBuildTool {
     doLast {
         ext.args = []
