--- a/devops/cicd/azure-pipeline.ci.yaml
+++ b/devops/cicd/azure-pipeline.ci.yaml
@@ -10,16 +10,14 @@ trigger:
     include:
       - '*'
 
-variables:
+parameters:
   - name        : poolName
-    displayName : Pool
     type        : string
     default     : 'On-premise Pool'
     values      :
       - 'Azure Pipelines'
       - 'On-premise Pool'
   - name        : vmImageName
-    displayName : VM
     type        : string
     default     : 'macos-latest'
     values      :
@@ -29,6 +27,6 @@ stages:
   - template: 'stages/build.yaml'
     parameters:
       name      : Build
-      poolName  : $(poolName)
-      vmImage   : $(vmImageName)
+      poolName  : ${{ parameters.poolName }}
+      vmImage   : ${{ parameters.vmImageName }}
       pipelineEnvironmentVariables  : '../environment_variables/build.yaml'    
