Fallback to ActionAttribute instead of ActionWithPsiContextAttribute. The latter requires a ResourceType which does not seem to work if I use typeof(GoToHandlrAction).

--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -17,9 +17,9 @@
            text="MediatR extensions" 
            popup="true">
       <add-to-group group-id="GoToMenu" />
-      <action id="GoToHandlrAction"
+      <action id="NoSuchCompany.ReSharper.MediatrPlugin.Actions.GoToHandlrAction"
               class="ca.nosuchcompany.rider.plugins.mediatr.GoToHandlrAction">
-        <keyboard-shortcut keymap="$default" first-keystroke="control alt F11" replace-all="true" />
+        <keyboard-shortcut keymap="$default" first-keystroke="alt H" replace-all="true" />
       </action>
     </group>
   </actions>
