--- a/test-solution/DotNetCore6Project/DotNetCore6_Domain.csproj
+++ b/test-solution/DotNetCore6Project/DotNetCore6_Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MediatR" Version="12.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Requests\Issue65\" />
+  </ItemGroup>
+
 </Project>
