--- a/devops/cicd/azure-pipeline.ci.yaml
+++ b/devops/cicd/azure-pipeline.ci.yaml
@@ -14,7 +14,7 @@ parameters:
   - name        : poolName
     displayName : Pool
     type        : string
-    default     : 'On-premise Pool'
+    default     : 'Azure Pipelines'
     values      :
       - 'Azure Pipelines'
       - 'On-premise Pool'
