--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 #   -P<propertyName>=<value>
 
 DotnetPluginId=NoSuchCompany.MediatrPlugin
-DotnetSolution=NoSuchCompany.MediatrPlugin.sln
+DotnetSolution=MediatorPlugin.sln
 RiderPluginId=ca.nosuchcompany.rider.plugins.mediatr
 PluginVersion=_PLACEHOLDER_
 
