--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -14,10 +14,10 @@
 
   <actions>
     <group id="org.intellij.sdk.action.GroupedActions" 
-           text="MediatR extensions" 
+           text="Mediator extensions" 
            popup="true">
       <add-to-group group-id="GoToMenu" />
-      <action id="NoSuchCompany.ReSharper.MediatrPlugin.Actions.GoToHandlrAction"
+      <action id="ReSharper.MediatorPlugin.Actions.GoToHandlrAction"
               class="ca.nosuchcompany.rider.plugins.mediatr.GoToHandlrAction">
         <keyboard-shortcut keymap="$default" first-keystroke="alt H" replace-all="true" />
       </action>
