--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Any property can be overwritten from command-line via
 #   -P<propertyName>=<value>
 
-DotnetPluginId=NoSuchCompany.MediatrPlugin
+DotnetPluginId=MediatorPlugin
 DotnetSolution=MediatorPlugin.sln
 RiderPluginId=ca.nosuchcompany.rider.plugins.mediatr
 PluginVersion=_PLACEHOLDER_
